WS_Drawing_Game_Frontend/index.css
body{
    height: 100vh;
    overflow: hidden;
    background-image: linear-gradient(to right, blue, cyan);
}

/* index.html */

.login_body {
    display: flex;
    justify-content: center;
    align-items: center;
}

.login_container {
    width: 50%;
    height: 50%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    label {
        font-size: 2.5em;
    }
    input {
        height: 3em;
        width: 20em;
        font-size: 1.5em;
        border-radius: 30px;
        border: 1px solid black;
        text-align: center;
    }
}




/* game.html */

#status, #word {
    text-align: center;
    margin-bottom: 0.5em;
}

.textContainer {
    display: flex;
    justify-content: center;
    gap: 2em;
}

.container {
    display: flex;
    height: 100%;
    margin: 0 2em 2em 2em;
    gap: 6em; 
}
#canvas {
    border: 1px solid black;
    background-color: white;
    border-radius: 20px;
}

.options {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 0.5em;
}

.options button {
    width: 3em;
    height: 3em;
    display: flex;
    justify-content: center;
    align-items: center;
}


.chat-container {
    width: 50%;
    max-height: 70vh;
    display: flex;
    flex-direction: column;
}

.chat {
    border-radius: 20px;
    border: 1px solid black;
    max-width: 70%;
    padding: 10px;
    flex-grow: 1;
    overflow-y: auto;
    display: flex;
    flex-direction: column;
    box-shadow: 0 0 3px 3px black;
}

.message {
    height: fit-content;
    width: fit-content;
    max-width: 80%;
    border-radius: 5px;
    padding: 10px;
    border: 1px solid black;
    margin-bottom: 10px;
    word-wrap: break-word;
    overflow-wrap: break-word;
    white-space: normal;
    background-color: lightgray;

    span {
        color: darkblue;
        font-style: italic;    
    }
}

.myMessage {
    align-self: flex-end;
    background-color: lightblue;
    border: 1px solid #b1dfbb;
    max-width: 80%;
}

#messageInput {
    margin-top: 10px;
    height: 2em;
    width: 75%;
    border-radius: 30px;
    text-align: center;
    border: 1px solid black;
}

.error {
    color: red;
}

